--- a/.github/workflows/buf_ci.yaml
+++ b/.github/workflows/buf_ci.yaml
@@ -11,7 +11,8 @@ jobs:
   buf:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
+      - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
       - uses: bufbuild/buf-action@v1
         with:
           format: true
