ci: enable mise experimental mode

--- a/.github/workflows/check_generated_files.yaml
+++ b/.github/workflows/check_generated_files.yaml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
       - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
+        with:
+          experimental: true
       - run:
           buf generate
       - name: Check for changes
@@ -36,7 +38,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
       - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
         with:
-          go-version-file: 'go.mod'
+          experimental: true
       - run:
           mockery
       - name: Check for changes
