--- a/.github/workflows/buf_ci.yaml
+++ b/.github/workflows/buf_ci.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
       - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
+        with:
+          experimental: true
       - uses: bufbuild/buf-action@v1
         with:
           format: true
