--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
       - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
+        with:
+          experimental: true
       - name: Unit Tests
         uses: robherley/go-test-action@v0
   coverage:
@@ -16,6 +18,8 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
       - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
+        with:
+          experimental: true
       - name: generate test coverage
         run: go test ./... -coverprofile=./cover_unit.out -covermode=atomic
       - name: check test coverage
