--- a/mise.toml
+++ b/mise.toml
@@ -5,6 +5,7 @@
 "aqua:goreleaser/goreleaser" = "2.5.0"
 "aqua:grpc/grpc-go/protoc-gen-go-grpc" = "latest"
 "aqua:protocolbuffers/protobuf-go/protoc-gen-go" = "1.36.0"
+"aqua:vektra/mockery" = "2.50.1"
 go = "1.23.4"
 "go:github.com/CycloneDX/cyclonedx-gomod/cmd/cyclonedx-gomod" = "1.8.0"
 "go:github.com/go-semantic-release/semantic-release/v2/cmd/semantic-release" = "2.31.0"
