--- a/.github/workflows/buf_ci.yaml
+++ b/.github/workflows/buf_ci.yaml
@@ -12,11 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
-      - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
+      - uses: bufbuild/buf-action@3fb70352251376e958c4c2c92c3818de82a71c2b # 1.0.2
         with:
-          experimental: true
-      - uses: bufbuild/buf-action@v1
-        with:
-          format: true
-          lint: true
-          breaking: true
+          token: ${{ secrets.BUF_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
