--- a/.github/workflows/check_generated_files.yaml
+++ b/.github/workflows/check_generated_files.yaml
@@ -22,6 +22,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
+
+      # Sets up protoc tooling for buf
+      - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
+        with:
+          experimental: true
       - uses: bufbuild/buf-action@3fb70352251376e958c4c2c92c3818de82a71c2b # 1.0.2
         with:
           setup_only: 'true'
