--- a/.github/workflows/build_go.yaml
+++ b/.github/workflows/build_go.yaml
@@ -1,6 +1,12 @@
-name: Build Go
+name: Build
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - dev
+      - beta
+  workflow_dispatch:
 
 jobs:
   build:
@@ -18,14 +24,13 @@ jobs:
       - name: Install dependencies
         run: go get .
       - name: Build
-        run: go build -o oslc-request-server-${{ matrix.go-arch }} ./cmd/oslc-request-server
+        run: go build -o oslc-request-server-linux-${{ matrix.go-arch }} ./cmd/oslc-request-server
       - name: Upload binaries
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # 4.5.0
         with:
-          name: oslc-request-server-${{ matrix.go-arch }}
-          path: oslc-request-server-${{ matrix.go-arch }}
+          name: oslc-request-server-linux-${{ matrix.go-arch }}
+          path: oslc-request-server-linux-${{ matrix.go-arch }}
           retention-days: 1
-
   collect:
     runs-on: ubuntu-latest
     needs: build
