ci: add dependency between collect and docker jobs

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,6 +66,7 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+    needs: collect
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
       - name: Download binaries
