--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: go get .
       - name: Build
-        run: go build -o oslc-request-server-linux-${{ matrix.go-arch }} ./cmd/oslc-request-server
+        run: GOOS=linux GOARCH=${{ matrix.go-arch }} go build -o oslc-request-server-linux-${{ matrix.go-arch }} ./cmd/oslc-request-server
       - name: Upload binaries
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # 4.5.0
         with:
@@ -75,7 +75,6 @@ jobs:
           name: oslc-request-server
           path: dist
       - run: |
-          ls -la
           cd dist
           sha256sum -c checksums.txt
       - name: Login to Docker Hub
@@ -93,6 +92,8 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          labels: |
+            org.opencontainers.image.description=OSLC Request Server
       - name: Build and push
         uses: docker/build-push-action@48aba3b46d1b1fec4febb7c5d0c644b249a11355 # 6.10.0
         id: push
