--- a/.github/workflows/acceptance_test.yaml
+++ b/.github/workflows/acceptance_test.yaml
@@ -24,4 +24,8 @@ jobs:
         uses: actions/setup-go@3041bf56c941b39c61721a86cd11f3bb1338122a # 5.2.0
         with:
           go-version-file: "./go.mod"
+      - uses: jdx/mise-action@249c01ba271e19fa76eede7f766161cc95ace489 # 2.1.10
+        with:
+          experimental: true
+      - run: mise run generate:certificates
       - run: IMAGE_TO_TEST="${{ github.event.inputs.image }}" go test tests/acceptance/*.go
