--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,14 +3,78 @@ on:
   push:
     branches:
       - main
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
+  release-gate:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    outputs:
+      version: ${{ steps.gate.outputs.version }} # If version is empty, then there is no release
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
+      - uses: go-semantic-release/action@48d83acd958dae62e73701aad20a5b5844a3bf45 # 1.23.0
+        id: gate
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          allow-initial-development-versions: 'true'
+          dry: 'true'
+  build:
+    uses: chainalysis-oss/oslc/.github/workflows/reusable_build.yaml@main
+    with:
+      version: ${{ needs.release-gate.outputs.version }}
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+    needs: release-gate
+    if: needs.release-gate.outputs.version != ''
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
+      - name: Login to registry
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # 3.3.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: chainalysis-oss/oslc/.github/workflows/acceptance_test.yaml@main
+        with:
+         image: ${{ needs.build.outputs.fully-qualified-image-name }}@${{ needs.build.outputs.oci-digest }}
   release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      packages: write
+    needs:
+      - test
+      - build
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@6524bf65af31da8d45b59e8c27de4bd072b392f5 # 3.8.0
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
+      - name: Login to registry
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # 3.3.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: go-semantic-release/action@48d83acd958dae62e73701aad20a5b5844a3bf45 # 1.23.0
+        id: release
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           allow-initial-development-versions: 'true'
+      - uses: imjasonh/setup-crane@31b88efe9de28ae0ffa220711af4b60be9435f6e # 0.4.0
+      - name: Tag image
+        run: |
+          crane auth login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+          crane tag ${{ needs.build.outputs.fully-qualified-image-name }}@${{ needs.build.outputs.oci-digest }} ${{ steps.release.outputs.version }}
+          crane tag ${{ needs.build.outputs.fully-qualified-image-name }}@${{ needs.build.outputs.oci-digest }} latest
