--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,11 +14,12 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  uses: chainalysis-oss/oslc/.github/workflows/reusable_build.yaml@main
-  with:
-    version: "unknown-dirty"
-  permissions:
-    contents: read
-    packages: write
-    attestations: write
-    id-token: write
+  build:
+    uses: chainalysis-oss/oslc/.github/workflows/reusable_build.yaml@main
+    with:
+      version: "unknown-dirty"
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
