--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,17 +38,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.2.2
-      - name: Login to registry
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # 3.3.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: chainalysis-oss/oslc/.github/workflows/acceptance_test.yaml@main
-        with:
-         image: ${{ needs.build.outputs.fully-qualified-image-name }}@${{ needs.build.outputs.oci-digest }}
+    uses: chainalysis-oss/oslc/.github/workflows/acceptance_test.yaml@main
+    with:
+      image: ${{ needs.build.outputs.fully-qualified-image-name }}@${{ needs.build.outputs.oci-digest }}
   release:
     runs-on: ubuntu-latest
     permissions:
